Fixed alignment issues on footer.

--- a/static/styles.css
+++ b/static/styles.css
@@ -212,7 +212,7 @@ body {
 
 /* FOOTER */
 
-footer {
+.home-footer {
     height: 12.5vh;
     background-color: #0C1821;
     color: #E1D9D1;
